--- a/detail.html
+++ b/detail.html
@@ -10,6 +10,7 @@
     <script src="js/jquery.cookie.js"></script>
 
     <script type="text/javascript">
+        // 我就是想测试一下git提交
         $(function() {
             $.getJSON("json/index.json", function(res) {
                 //console.log(res.listPages);
