--- a/detail.html
+++ b/detail.html
@@ -11,6 +11,7 @@
 
     <script type="text/javascript">
         // 我就是想测试一下git提交
+        //我还想试试
         $(function() {
             $.getJSON("json/index.json", function(res) {
                 //console.log(res.listPages);
